fixed #pic-cartoon bleeding out

--- a/css/index.sass
+++ b/css/index.sass
@@ -1077,9 +1077,9 @@ input[type="submit"]
 
 #pic-cartoon
   background-color: $color-bg-darker
+  margin-left: 40px
+  margin-left: 2.5rem
   svg
-    max-height: 310px
-    @media screen and (min-width: $break-mobileL)
-      max-height: 370px
+    max-height: 260px
     @media screen and (min-width: $break-tabletS)
-      max-height: 190px
+      max-height: 160px
